--- a/force-app/main/default/lwc/eMS_LM_AllLeaveHistory/eMS_LM_AllLeaveHistory.html
+++ b/force-app/main/default/lwc/eMS_LM_AllLeaveHistory/eMS_LM_AllLeaveHistory.html
@@ -84,7 +84,7 @@
 								<tr key={Req.Id} style="border-bottom:1px solid #d4d4d4">
 									<td style="padding:15px">
 										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
-											{Req.EMS_LM_Leave_Type_Name__c }</div>
+											{Req.EMS_LM_Leave_Type__r.Name }</div>
 									</td>
 									<td>
 										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
