--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
@@ -125,7 +125,7 @@
 									</td>
 									<td>
 										<div class="slds-truncate dv-dynamic-width">
-											{Req.EMS_LM_Leave_Type_Name__c }</div>
+											{Req.EMS_LM_Leave_Type__r.Name }</div>
 									</td>
 									<td>
 										<div class="slds-truncate dv-dynamic-width">
