--- a/force-app/main/default/lwc/myExpenses/myExpenses.html
+++ b/force-app/main/default/lwc/myExpenses/myExpenses.html
@@ -15,7 +15,7 @@
         </div>
 
      <div class="container">
-    <div class="box" style="width:50%"> <font size="48px"><b> {reimbursment} </b></font> <i> <b>INR</b></i> <br/> Reimbursement Pending </div>
+    <div class="box" style="width:50%"> <font size="48px"><b> <lightning-formatted-number value={reimbursment} format-style="currency" currency-code={reimbCurrency}></lightning-formatted-number> </b></font> <i> <b></b></i> <br/> Reimbursement Pending </div>
     <div class="box" style="width:50%;text-align:right;padding-right:10px"> <lightning-button variant="brand" label="New Claim"  onclick={handleClick}></lightning-button> </div>
    
     <div style="clear: both;"></div> 
@@ -38,7 +38,7 @@
           <td><a href="#" data-id={row.expid} onclick={handleexpClick}>{row.expName}</a></td>
           <td><lightning-formatted-date-time value={row.reimbdate}> </lightning-formatted-date-time></td>
           <td>{row.projectName}</td>
-          <td><lightning-formatted-number value={row.amount} format-style="currency" currency-code={row.amountcurrency}></lightning-formatted-number> </td>
+          <td><!--<lightning-formatted-number value={row.amount} format-style="currency" currency-code={row.amountcurrency}></lightning-formatted-number> --> {row.amount}</td>
           <td>{row.status}</td>
         </tr>
       </template>
@@ -91,7 +91,7 @@
                                     <lightning-messages> </lightning-messages>
                                     <lightning-layout>
                                       <lightning-layout-item flexibility="auto" padding="around-small">
-                                    <lightning-input-field field-name="Project__c" required></lightning-input-field>
+                                      <lightning-input-field field-name="Project__c" required></lightning-input-field>
                                     
                                       </lightning-layout-item>
                                        <lightning-layout-item flexibility="auto" padding="around-small">
