--- a/force-app/main/default/lwc/eMS_LM_LeaveManagement/eMS_LM_LeaveManagement.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveManagement/eMS_LM_LeaveManagement.html
@@ -1,29 +1,35 @@
 <!-- This component is used to show all the compinents in single page For current Logged in Employee  -->
 
 <template>
-		<div class="right-aligned">
-			<c-e-m-s-_-l-m-_-apply-new onrefresh={handleRefresh}></c-e-m-s-_-l-m-_-apply-new>
-		</div>
-		<div class="slds-box slds-p-around_none slds-m-top_x-small slds-m-bottom_medium slds-m-horizontal_none">
+	<div class="right-aligned">
+		<c-e-m-s-_-l-m-_-apply-new onrefresh={handleRefresh}></c-e-m-s-_-l-m-_-apply-new>
+	</div>
+	<div class="slds-box slds-p-around_none slds-m-top_x-small slds-m-bottom_medium slds-m-horizontal_none">
 
-			<c-e-m-s-_-l-m-_-leave-balance onrefresh={handleRefresh}></c-e-m-s-_-l-m-_-leave-balance>
-			<lightning-tabset  active-tab-value={activeTabValue}>
-				<lightning-tab label="My Requests" value="one">
-					<c-e-m-s-_-l-m-_-all-leave-history></c-e-m-s-_-l-m-_-all-leave-history>
+		<c-e-m-s-_-l-m-_-leave-balance onrefresh={handleRefresh}></c-e-m-s-_-l-m-_-leave-balance>
+		<lightning-tabset active-tab-value={activeTabValue}>
+			<lightning-tab label="My Requests" value="one">
+				<c-e-m-s-_-l-m-_-all-leave-history></c-e-m-s-_-l-m-_-all-leave-history>
+			</lightning-tab>
+
+			<template if:true={hidePendingTab}>
+				<lightning-tab label="Pending On Me" value="two">
+					<c-e-m-s-_-l-m-_-leave-history-_-pending-on-me></c-e-m-s-_-l-m-_-leave-history-_-pending-on-me>
 				</lightning-tab>
+			</template>
 
-				<template if:true={hidePendingTab}>
-					<lightning-tab label="Pending On Me" value="two">
-						<c-e-m-s-_-l-m-_-leave-history-_-pending-on-me></c-e-m-s-_-l-m-_-leave-history-_-pending-on-me>
-					</lightning-tab>
-				</template>
+			<template if:true={showTabAdmin}>
+				<lightning-tab label="Admin View" value="three">
+					<c-e-m-s-_-l-m-_-leave-history-_-admin-view></c-e-m-s-_-l-m-_-leave-history-_-admin-view>
+				</lightning-tab>
+			</template>
+			<!--	<template if:true={hidePendingTab}> -->
+			<lightning-tab label="Pening Service Request" value="four">
+				<!--<c-my-_-servic-request-_-pendingon-me></c-my-_-servic-request-_-pendingon-me>-->
+				<!--<c-my-service-request></c-my-service-request> -->
+			</lightning-tab>
+			<!--</template> -->
+		</lightning-tabset>
 
-				<template if:true={showTabAdmin}>
-					<lightning-tab label="Admin View" value="three">
-						<c-e-m-s-_-l-m-_-leave-history-_-admin-view></c-e-m-s-_-l-m-_-leave-history-_-admin-view>
-					</lightning-tab>
-				</template>
-			</lightning-tabset>
-			
-		</div>
+	</div>
 </template>
