--- a/force-app/main/default/lwc/serviceRequestResignationForm/serviceRequestResignationForm.html
+++ b/force-app/main/default/lwc/serviceRequestResignationForm/serviceRequestResignationForm.html
@@ -69,7 +69,7 @@
 
 								<lightning-layout>
                                     <lightning-layout-item flexibility="auto" style="width:50%" padding="around-small">
-										<lightning-input-field field-name="Last_Working_Date__c" required>
+										<lightning-input-field field-name="Last_Working_Date__c"  value ={lastworkingDate} >
 										</lightning-input-field>
 									</lightning-layout-item>
 									</lightning-layout>
