--- a/force-app/main/default/lwc/eMS_LM_WFH/eMS_LM_WFH.html
+++ b/force-app/main/default/lwc/eMS_LM_WFH/eMS_LM_WFH.html
@@ -1,74 +1,74 @@
 <!--  this conponent used to Apply WFH for current logged in Employee   -->
 <template>
-  <!--is Load-->
-  <div if:true={isLoading}>
-        <lightning-spinner
-            alternative-text="Loading..." variant="brand" class="slds-is-fixed">
-        </lightning-spinner>
-    </div>
-    <!--Body-->
-  <div  class="myDivAlligment">
-  <div class="slds-box slds-theme_shade">
-    <div class="slds-modal slds-fade-in-open slds-backdrop">
-      <div class="slds-modal__container">
-        <div >
-          <div class="slds-modal__header">
-          <lightning-button-icon icon-name="utility:close" alternative-text="Close" size="large"
-            variant="bare-inverse" onclick={closeme} class="slds-modal__close">
-          </lightning-button-icon>
-          <h1 id="modal-heading-02" class="slds-modal__title slds-hyphenate">Apply Work From Home</h1>
-          </div>
-          <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-            <lightning-layout multiple-rows>
-              <lightning-layout-item padding="around-small" size="6">
-                <div>
-                  <lightning-input type="Date" label="Start Date" name="startDate1" value={startDate1}
-                    onchange={datechange}></lightning-input>
-                </div>
-              </lightning-layout-item>
-              <lightning-layout-item padding="around-small" size="6">
-                <div>
-                  <lightning-input type="Date" label="End Date" name="endDate1" value={endDate1}
-                    onchange={datechange}></lightning-input>
-                </div>
-              </lightning-layout-item>
-              <!-- template if:true={check2} -->
-                <lightning-layout-item padding="around-small" size="12">
-                  <div>
-                    <lightning-input type="number" label="Duration" value={duration} disabled></lightning-input>
-                  </div>
-                </lightning-layout-item>
-              <!-- /template -->                    
-              <lightning-layout-item padding="around-small" size="12">
-                <div>
-                  <lightning-textarea type="text" maxlength="250" label="Reason" onchange={reasonchange} value={reason}></lightning-textarea>
-                </div>
-              </lightning-layout-item>
-              
-            </lightning-layout>
-            <div>
-                  <div class="slds-var-m-around_medium slds-align_absolute-center">
-                  <lightning-input type="file"
-                  accept=".png, .doc, .docx, .pdf , .jpg, .jpeg"
-                  label="Upload Supporting Document" onchange={openfileUpload}></lightning-input>
-                </div>
-                <div class="slds-align_absolute-center">
-                <template if:true={fileData}>
-                  <p>{fileData.filename}</p>
-              </template>
-                </div>
-            </div>
-          </div>
-          <footer class="slds-modal__footer slds-align_absolute-center">
-            <lightning-button variant="destructive" label="Cancel" title="Cancel"
-                  onclick={closeme} class="slds-m-left_x-small"></lightning-button>
-            <lightning-button variant="brand" label="Submit" title="Submit" onclick={submit} disabled={disabledSubmitted}
-                    class="slds-m-left_x-small"></lightning-button>
-          </footer>
-        </div>
+	<!--is Load-->
+	<div if:true={isLoading}>
+		<lightning-spinner alternative-text="Loading..." variant="brand" class="slds-is-fixed">
+		</lightning-spinner>
+	</div>
+	<!--Body-->
+	<div class="myDivAlligment">
+		<div class="slds-box slds-theme_shade">
+			<div class="slds-modal slds-fade-in-open slds-backdrop">
+				<div class="slds-modal__container">
+					<div>
+						<div class="slds-modal__header">
+							<lightning-button-icon icon-name="utility:close" alternative-text="Close" size="large"
+								variant="bare-inverse" onclick={closeme} class="slds-modal__close">
+							</lightning-button-icon>
+							<h1 id="modal-heading-02" class="slds-modal__title slds-hyphenate">Apply Work From Home</h1>
+						</div>
+						<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
+							<lightning-layout multiple-rows>
+								<lightning-layout-item padding="around-small" size="6">
+									<div>
+										<lightning-input type="Date" label="Start Date" name="startDate1"
+											value={startDate1} onchange={datechange}></lightning-input>
+									</div>
+								</lightning-layout-item>
+								<lightning-layout-item padding="around-small" size="6">
+									<div>
+										<lightning-input type="Date" label="End Date" name="endDate1" value={endDate1}
+											onchange={datechange}></lightning-input>
+									</div>
+								</lightning-layout-item>
+								<!-- template if:true={check2} -->
+								<lightning-layout-item padding="around-small" size="12">
+									<div>
+										<lightning-input type="number" label="Duration" value={duration} disabled>
+										</lightning-input>
+									</div>
+								</lightning-layout-item>
+								<!-- /template -->
+								<lightning-layout-item padding="around-small" size="12">
+									<div>
+										<lightning-textarea type="text" maxlength="250" label="Reason"
+											onchange={reasonchange} value={reason}></lightning-textarea>
+									</div>
+								</lightning-layout-item>
 
-      </div>
-    </div>
-  </div>
-  </div>
+							</lightning-layout>
+							<div>
+								<div class="slds-var-m-around_medium slds-align_absolute-center">
+									<lightning-input type="file" accept=".png, .doc, .docx, .pdf , .jpg, .jpeg"
+										label="Upload Supporting Document" onchange={openfileUpload}></lightning-input>
+								</div>
+								<div class="slds-align_absolute-center">
+									<template if:true={fileData}>
+										<p>{fileData.filename}</p>
+									</template>
+								</div>
+							</div>
+						</div>
+						<footer class="slds-modal__footer slds-align_absolute-center">
+							<lightning-button variant="destructive" label="Cancel" title="Cancel" onclick={closeme}
+								class="slds-m-left_x-small"></lightning-button>
+							<lightning-button variant="brand" label="Submit" title="Submit" onclick={submit}
+								disabled={disabledSubmitted} class="slds-m-left_x-small"></lightning-button>
+						</footer>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
 </template>
