--- a/force-app/main/default/lwc/serviceRequestChangeDetailsForm/serviceRequestChangeDetailsForm.html
+++ b/force-app/main/default/lwc/serviceRequestChangeDetailsForm/serviceRequestChangeDetailsForm.html
@@ -137,7 +137,8 @@
 										<lightning-button label="Close" title="Close" icon-name="utility:close"
 											onclick={handleCancel}>
 										</lightning-button>&nbsp;&nbsp;
-										<lightning-button variant="brand" name="submit" label="Save" onclick={handleSubmit}>
+										<lightning-button variant="brand" name="submit" label="Save"
+											onclick={handleSubmit}>
 										</lightning-button>
 									</div>
 								</div>
@@ -158,16 +159,20 @@
 											<lightning-messages></lightning-messages>
 											<lightning-input-field field-name="Family_Member_Name__c" required>
 											</lightning-input-field>
-											<lightning-input-field field-name="Is_It_Emergency_Contact__c" required>
+											<lightning-input-field field-name="Is_It_Emergency_Contact__c"
+												onchange={handleEmergencyChange}>
 											</lightning-input-field>
-											<lightning-input-field field-name="Is_it_Dependant_Contact__c" required>
+											<lightning-input-field field-name="Is_it_Dependant_Contact__c"
+												onchange={handleDependentChange}>
 											</lightning-input-field>
 										</lightning-layout-item>
 										<lightning-layout-item size="6" class="slds-p-around_xx-small">
 											<lightning-input-field field-name="Relationships__c" required>
 											</lightning-input-field>
-											<lightning-input-field field-name="SuppliedPhone" required></lightning-input-field>
-											<lightning-input-field field-name="Date_of_Birth__c" required>
+											<lightning-input-field field-name="SuppliedPhone" required={isEmergencyReq}
+												disabled={isEmergency}></lightning-input-field>
+											<lightning-input-field field-name="Date_of_Birth__c"
+												required={isDependentReq} disabled={isDependent}>
 											</lightning-input-field>
 										</lightning-layout-item>
 									</lightning-layout>
