--- a/force-app/main/default/lwc/timeSheetTile/timeSheetTile.html
+++ b/force-app/main/default/lwc/timeSheetTile/timeSheetTile.html
@@ -10,7 +10,7 @@
                                     <font size="4"  > <b>Time entered this week </b> </font> <br/> <br/>
                                     <p> Make sure to enter 40 hours per week to stay complaint </p><br/><br/>
 
-                                   <lightning-button variant="brand" label="Enter Time"  icon-name="utility:connected_apps" onclick={handleClick}></lightning-button>
+                                   <lightning-button variant="brand" label="Enter Time"  icon-name="utility:connected_apps" onclick={handleClickon}></lightning-button>
 
                                 </div>
                             </div> 
