--- a/force-app/main/default/lwc/eMS_LM_LeaveManagement/eMS_LM_LeaveManagement.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveManagement/eMS_LM_LeaveManagement.html
@@ -2,11 +2,11 @@
 
 <template>
 	<div class="right-aligned">
-		<c-e-m-s-_-l-m-_-apply-new onrefresh={handleRefresh}></c-e-m-s-_-l-m-_-apply-new>
+		<c-e-m-s-_-l-m-_-apply-new></c-e-m-s-_-l-m-_-apply-new>
 	</div>
 	<div class="slds-box slds-p-around_none slds-m-top_x-small slds-m-bottom_medium slds-m-horizontal_none">
 
-		<c-e-m-s-_-l-m-_-leave-balance onrefresh={handleRefresh}></c-e-m-s-_-l-m-_-leave-balance>
+		<c-e-m-s-_-l-m-_-leave-balance></c-e-m-s-_-l-m-_-leave-balance>
 		<lightning-tabset active-tab-value={activeTabValue}>
 			<lightning-tab label="My Requests" value="one">
 				<c-e-m-s-_-l-m-_-all-leave-history></c-e-m-s-_-l-m-_-all-leave-history>
