Deploy changes to QA

--- a/force-app/main/default/lwc/eMS_LM_EditapplyNew/eMS_LM_EditapplyNew.html
+++ b/force-app/main/default/lwc/eMS_LM_EditapplyNew/eMS_LM_EditapplyNew.html
@@ -48,11 +48,17 @@
                     </div>
                   </lightning-layout-item> 
                 
-                <lightning-layout-item padding="around-small" size="12">
+                <lightning-layout-item padding="around-small" size="6">
                   <div>
                     <lightning-input type="text" label="Leave Duration" value={duration} disabled></lightning-input>
                   </div>
                 </lightning-layout-item>
+                <lightning-layout-item padding="around-small" size="6">
+								<div>
+									<lightning-input type="number" label="No of Available Leaves" value={availabledays}
+										disabled></lightning-input>
+								</div>
+							</lightning-layout-item>
                 </template>
   
                 
