--- a/force-app/main/default/lwc/assignMutipleResources/assignMutipleResources.html
+++ b/force-app/main/default/lwc/assignMutipleResources/assignMutipleResources.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title="">
         <div class="slds-p-horizontal_small">
-            <lightning-record-edit-form object-api-name="EMS_TM_Assignment__c" style="min-height:100vh;">
+            <lightning-record-edit-form object-api-name="EMS_TM_Assignment__c" style="width:fit-content">
                 <lightning-layout multiple-rows>
                     <lightning-layout-item size="12" small-device-size="6" medium-device-size="4" large-device-size="6" padding="around-small">
                         <lightning-input-field field-name="EMS_TM_ProjectName_Asgn__c" value={recordId} onchange={handleAccountId}></lightning-input-field>
@@ -124,6 +124,7 @@
         </div>
         <div slot="footer">
             <template if:true={selectedProject}>
+                <lightning-button name="Cancel" label="Cancel" class="slds-p-around_xx-small" variant="destructive-text" onclick={handleCancel}></lightning-button>
                 <lightning-button name="multipleRowSave" label="Save Assignments" class="slds-p-around_xx-small" variant="brand" onclick={saveData}></lightning-button>
                 <!-- <lightning-button name="Cancel" label="Cancel" class="slds-p-around_xx-small" variant="destructive" onclick={handleCancel}></lightning-button> -->
                 <lightning-button name="multipleRowAddition" label="Add Row" class="slds-p-around_xx-small" variant="brand" onclick={addRow}></lightning-button>
